[package]
name = "substreams_antelope_reliability_tracker"
version = "1.0.0"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5.0"
substreams-ethereum = "0.9.0"
prost = "0.11"
prost-types = "0.11.8"
substreams-antelope = "0.1.1"
substreams-sink-prometheus = "0.1.9"
substreams-sink-kv = "0.1.3"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
